# memberbooth

./: .gitignore  Makefile  README.md  config.py  creator_refactoring.vim  dev.py  get_member_info.py  get_screenshot.sh  gui.py  list_arduino_serial_devices.sh  logger.py  login.py  main.py  memberbooth.py  print_3d_printer_label.py  print_box_label.py  print_label.py  print_meetup_name_tag.py  print_name_tag.py  print_temporary_storage_label.py  print_warning_label.py  pyproject.toml  requirements.txt  sms_event.py  sms_gui.py  sms_label_creator.py  sms_print_label.py  test_label.py  tox.ini
.github/workflows/: pythonapp.yml
src/: application_states.py  event.py  gui.py  label_creator.py  label_printer.py  maker_admin.py  member.py  sms_event.py  sms_gui.py  sms_label_creator.py  sms_label_printer.py
src/backend/: label_data.py  makeradmin.py  member.py
src/gui/: design.py  event.py  states.py
src/label/: creator.py  printer.py
src/test/: maker_admin_mock.py  makeradmin_mock.py  slack_client_mock.py
src/util/: key_reader.py  logger.py  parser.py  slack_client.py  token_config.py
tests/: test_backend.py  test_labels.py
